--- a/app/templates/_labels.html
+++ b/app/templates/_labels.html
@@ -1,3 +1,3 @@
 {% for label in blog.labels.all() %}
-<sapn class='label label-{{ label.type }}'>{{ label.name }}</sapn>&nbsp;
+<sapn class='label blog-label label-{{ label.type }}'>{{ label.name }}</sapn>&nbsp;
 {% endfor %}
