--- a/app/static/my_style.css
+++ b/app/static/my_style.css
@@ -77,8 +77,8 @@ h6, .h6 {
 .blog-summary {
     margin-bottom: 5px;
     margin-top: 5px;
-    font-size: 14px;
-    line-height: 1.6;
+    font-size: 16px;
+    line-height: 1.5;
     color: #333333;
 }
 
@@ -114,7 +114,7 @@ h6, .h6 {
 }
 
 .blog-detail-ul > li {
-    font-size: 12px;
+    font-size: 14px;
     color: gray;
 }
 
@@ -151,10 +151,27 @@ h6, .h6 {
     margin-top: 25px;
 }
 
+.blog-commit-area {
+    resize: none;
+    background-color: #f9f9f9;
+    border-color: #dddddd;
+    box-shadow: none;
+}
+
+.blog-commit-area:focus {
+    box-shadow: none;
+    border-color: #dddddd;
+}
+
 .blog-commit-btn {
     border-radius: 25px;
     padding-left: 20px;
     padding-right: 20px;
+}
+
+.blog-label {
+    padding: 3px 6px 3px 6px;
+    font-size: 14px;
 }
 
 /*
@@ -293,26 +310,13 @@ ul.comments {
     margin: 16px 0px 0px 0px;
 }
 
-ul.comments li.comment {
-    margin-left: 0px;
-    padding: 8px;
-    border-bottom: 1px solid #e0e0e0;
-}
-
-ul.comments li.comment:nth-child(1) {
-    border-top: 1px solid #e0e0e0;
-}
-
-ul.comments li.comment:hover {
-    background-color: #f0f0f0;
-}
-
 div.comment-date {
-    float: right;
+    color: gray;
+    font-size: 12px;
 }
 
 div.comment-user {
-    font-weight: bold;
+    font-size: 16px;
 }
 
 div.comment-thumbnail {
@@ -328,8 +332,19 @@ div.comment-form {
     margin: 16px 25px 16px 10px;
 }
 
-.nocomment span h4 {
+.comment-logout {
     text-align: center;
+}
+
+.comment-logout a {
+    color: #428bca;
+    text-decoration: none;
+}
+
+.comment-edit-btn {
+    border-radius: 20px;
+    padding: 2px 10px 2px 10px;
+    font-size: 10px;
 }
 
 /*
