--- a/app/templates/_comments.html
+++ b/app/templates/_comments.html
@@ -1,69 +1,72 @@
 <h3 class="col-md-8 col-md-offset-2 blog-commit-title"><b>评论</b></h3>
 
 {% if current_user.is_authenticated %}
-<div class="col-md-8 col-md-offset-2">
-    <form method='post' role="form">
-        {{ form.hidden_tag() }}
-        <div class="form-group">
-            {{ form.content(class="form-control", rows="3", placeholder=form.content.label.text) }}
-        </div>
-        <div class="form-group">
-            {{ form.submit(class="btn btn-success blog-commit-btn pull-right") }}
-        </div>
-    </form>
-</div>
+    <div class="col-md-8 col-md-offset-2">
+        <form method='post' role="form">
+            {{ form.hidden_tag() }}
+            <div class="form-group">
+                {{ form.content(class="form-control blog-commit-area", rows="3", placeholder=form.content.label.text) }}
+            </div>
+            <div class="form-group">
+                {{ form.submit(class="btn btn-success blog-commit-btn pull-right") }}
+            </div>
+        </form>
+    </div>
 {% else %}
-<div class="col-md-8 col-md-offset-2 nocomment">
-    <span><h4><hr>想评论此文章？请先<a href="{{ url_for('auth.login') }}">登录</a>～</h4></span>
-</div>
+    <div class="col-md-8 col-md-offset-2 comment-logout">
+        <h4><a href="{{ url_for('auth.login') }}">登录</a>后可以评论哦</h4>
+    </div>
 {% endif %}
 
 <div id="comments" class="col-md-8 col-md-offset-2">
     <ul class="comments">
         {% if not comments %}
-        <div class="nocomment">
-            <span><h4><hr>--暂无评论--</h4></span>
-        </div>
+            <div class="comment-logout">
+                <hr>
+                <h4>--暂无评论--</h4>
+            </div>
         {% else %}
-        {% for comment in comments %}
-        <li class="comment">
-            <div class="comment-thumbnail">
-                <img class="img-rounded profile-thumbnail" src="{{ comment.user.gravatar(size=40) }}">
-            </div>
-            <div class="comment-content">
-                <div class="comment-date">{{ moment(comment.timestamp).fromNow() }}</div>
-                <div class="comment-author">
-                    {{ comment.user.username }}{% if comment.user.id == current_user.id %} (作者){% endif %}
+            {% for comment in comments %}
+                <li>
+                    <img class="img-circle pull-left" src="{{ comment.user.gravatar(size=40) }}">
+                    <div class="comment-user">
+                        {{ comment.user.username }}{% if comment.user.id == current_user.id %} (作者){% endif %}
+                    </div>
+                    <div class="comment-date">{{ moment(comment.timestamp).fromNow() }}</div>
+
+                    <div class="comment-content">
+
+                        <div class="comment-body">
+                            {% if comment.disabled %}
+                                <p><i>该评论内容已被管理员屏蔽</i></p>
+                            {% endif %}
+                            {% if not comment.disabled or current_user.is_administrator() %}
+                                <p>{{ comment.content_html |safe }}</p>
+                            {% endif %}
+                        </div>
+                        {% if current_user.is_administrator() %}
+                            <div>
+                                {% if comment.disabled %}
+                                    <a class="btn btn-warning btn-xs comment-edit-btn"
+                                       href="{{ url_for('manage.enable_comment', id=comment.id, page=page) }}">恢复</a>
+                                {% else %}
+                                    <a class="btn btn-warning btn-xs comment-edit-btn"
+                                       href="{{ url_for('manage.disable_comment', id=comment.id, page=page) }}">屏蔽</a>
+                                {% endif %}
+                                <a class="btn btn-danger btn-xs comment-edit-btn"
+                                   href="{{ url_for('manage.delete_comment', id=comment.id, page=page) }}">删除</a>
+                            </div>
+
+                        {% endif %}
+                    </div>
+                </li>
+                <hr>
+            {% endfor %}
+            {% if pagination %}
+                <div class="col-md-8 col-md-offset-2 pagination-comment">
+                    {{ macros.pagination_widget(pagination, 'main.blog', id=blog.id) }}
                 </div>
-                <div class="comment-body">
-                    {% if comment.disabled %}
-                    <p><i>该评论内容已被管理员屏蔽。</i></p>
-                    {% endif %}
-                    {% if not comment.disabled or current_user.is_administrator() %}
-                    <p>{{ comment.content_html |safe }}</p>
-                    {% endif %}
-                </div>
-                <br>
-                <br>
-                {% if current_user.is_administrator() %}
-                {% if comment.disabled %}
-                <a class="btn btn-default btn-xs"
-                   href="{{ url_for('manage.enable_comment', id=comment.id, page=page) }}">恢复</a>
-                {% else %}
-                <a class="btn btn-danger btn-xs"
-                   href="{{ url_for('manage.disable_comment', id=comment.id, page=page) }}">屏蔽</a>
-                {% endif %}
-                <a class="btn btn-danger btn-xs"
-                   href="{{ url_for('manage.delete_comment', id=comment.id, page=page) }}">删除</a>
-                {% endif %}
-            </div>
-        </li>
-        {% endfor %}
-        {% if pagination %}
-        <div class="col-md-8 col-md-offset-2 pagination-comment">
-            {{ macros.pagination_widget(pagination, 'main.blog', id=blog.id) }}
-        </div>
-        {% endif %}
+            {% endif %}
         {% endif %}
     </ul>
 </div>
