--- a/app/static/my_style.css
+++ b/app/static/my_style.css
@@ -2,47 +2,35 @@ body {
     padding-top: 80px;
 }
 
-/*
- * Globals
- */
-
-h1, .h1,
-h2, .h2,
-h3, .h3,
-h4, .h4,
-h5, .h5,
-h6, .h6 {
+h1, h2, h3, h4, h5, h6 {
     margin-top: 0;
     font-family: Microsoft YaHei, "Helvetica Neue", Helvetica, Arial, sans-serif;
     font-weight: normal;
     color: #333;
 }
 
-/*
- * Main column and sidebar layout
- */
-
-.blog-main {
-    font-size: 18px;
-    line-height: 1.5;
-}
-
-/* Sidebar modules for boxing content */
-.sidebar-module {
-    padding: 15px;
-    margin: 0 -15px 15px;
-}
-
-.sidebar-module-inset {
-    padding: 15px;
+.main-sidebar {
     background-color: #f5f5f5;
-    border-radius: 4px;
+    border-radius: 5px;
+    padding: 15px;
+    margin: 0 -10px 0 -10px;
 }
 
-.sidebar-module-inset p:last-child,
-.sidebar-module-inset ul:last-child,
-.sidebar-module-inset ol:last-child {
-    margin-bottom: 0;
+.main-sidebar img {
+    width: 7%;
+    height: 7%;
+}
+
+.main-sidebar-label-title {
+    margin-top: 20px;
+}
+
+.main-sidebar a {
+    color: gray;
+}
+
+.main-sidebar a:hover {
+    color: black;
 }
 
 /*blog list title*/
@@ -77,7 +65,7 @@ h6, .h6 {
 .blog-summary {
     margin-bottom: 5px;
     margin-top: 5px;
-    font-size: 16px;
+    font-size: 14px;
     line-height: 1.5;
     color: #333333;
 }
@@ -128,6 +116,10 @@ h6, .h6 {
     border-color: #FF6347;
     color: white;
     background-color: #FF6347;
+    margin-top: 20px;
+    font-size: 16px;
+    padding-right: 20px;
+    padding-left: 20px;
 }
 
 .blog-favourite-btn:hover {
@@ -140,10 +132,15 @@ h6, .h6 {
     border-color: #FF6347;
     color: #FF6347;
     background-color: white;
+    margin-top: 20px;
+    font-size: 16px;
+    padding-right: 20px;
+    padding-left: 20px;
 }
 
 .blog-unfavourite-btn:hover {
     color: #FF6347;
+    background-color: #FFF0F5;
     text-decoration: none;
 }
 
@@ -301,13 +298,9 @@ h6, .h6 {
     text-align: center;
 }
 
-/*
- *  Comment
- */
 ul.comments {
     list-style-type: none;
-    padding: 0px;
-    margin: 16px 0px 0px 0px;
+    padding: 0;
 }
 
 div.comment-date {
@@ -319,20 +312,15 @@ div.comment-user {
     font-size: 16px;
 }
 
-div.comment-thumbnail {
-    position: absolute;
-}
-
 div.comment-content {
-    margin-left: 48px;
-    min-height: 48px;
-}
-
-div.comment-form {
-    margin: 16px 25px 16px 10px;
+    margin-top: 15px;
 }
 
 .comment-logout {
+    text-align: center;
+}
+
+.comment-none {
     text-align: center;
 }
 
@@ -347,10 +335,3 @@ div.comment-form {
     font-size: 10px;
 }
 
-/*
- *  About me
- */
-.github {
-    width: 6%;
-    height: 6%;
-}
