--- a/app/templates/_macros.html
+++ b/app/templates/_macros.html
@@ -1,10 +1,9 @@
 {% macro pagination_widget(pagination, endpoint) %}
 <ul class="pagination">
-    <li
-    {% if not pagination.has_prev %} class="disabled"{% endif %}>
-    <a href="{% if pagination.has_prev %}{{ url_for(endpoint, page=pagination.prev_num, **kwargs) }}{% else %}#{% endif %}">
-        上一页
-    </a>
+    <li {% if not pagination.has_prev %} class="disabled" {% endif %}>
+        <a href="{% if pagination.has_prev %}{{ url_for(endpoint, page=pagination.prev_num, **kwargs) }}{% else %}#{% endif %}">
+            &larr;
+        </a>
     </li>
     {% for p in pagination.iter_pages() %}
     {% if p %}
@@ -21,11 +20,10 @@
     <li class="disabled"><a href="#">&hellip;</a></li>
     {% endif %}
     {% endfor %}
-    <li
-    {% if not pagination.has_next %} class="disabled"{% endif %}>
-    <a href="{% if pagination.has_next %}{{ url_for(endpoint, page=pagination.next_num, **kwargs) }}{% else %}#{% endif %}">
-        下一页
-    </a>
+    <li {% if not pagination.has_next %} class="disabled" {% endif %}>
+        <a href="{% if pagination.has_next %}{{ url_for(endpoint, page=pagination.next_num, **kwargs) }}{% else %}#{% endif %}">
+            &rarr;
+        </a>
     </li>
 </ul>
 {% endmacro %}
