--- a/app/templates/comments.html
+++ b/app/templates/comments.html
@@ -10,31 +10,38 @@
         <ul class="comments">
             {% if comments %}
             {% for comment in comments %}
-            <li class="comment">
-                <div class="comment-thumbnail">
-                    <img class="img-rounded profile-thumbnail" src="{{ comment.user.gravatar(size=40) }}">
-                </div>
-                <div class="comment-content">
-                    <div class="comment-date">{{ moment(comment.timestamp).fromNow() }}</div>
-                    <div class="comment-author">
-                        {{ comment.user.username }}{% if comment.user.id == current_user.id %} (作者){% endif %}
-                    </div>
-                    <div class="comment-body">
-                        {{ comment.content_html |safe }}
+            <li id="{{ comment.id }}">
+                <div class="row">
+                    <div class="col-md-1">
+                        <img class="img-circle" src="{{ comment.user.gravatar(size=40) }}">
                     </div>
                     <div>
-                        {{ comment.blog.title }}
+                        <div class="comment-user">
+                            {{ comment.user.username }}{% if comment.user.id == current_user.id %} (作者){% endif %}
+                        </div>
+                        <div class="comment-date">{{ moment(comment.timestamp).fromNow() }}</div>
                     </div>
-                    {% if comment.disabled %}
-                    <a class="btn btn-default btn-xs"
-                       href="{{ url_for('manage.enable_comment', id=comment.id, page=page, type='manage') }}">恢复</a>
-                    {% else %}
-                    <a class="btn btn-danger btn-xs"
-                       href="{{ url_for('manage.disable_comment', id=comment.id, page=page, type='manage') }}">屏蔽</a>
-                    {% endif %}
-                    <a class="btn btn-danger btn-xs"
-                       href="{{ url_for('manage.delete_comment', id=comment.id, page=page, type='manage') }}">删除</a>
                 </div>
+                <div class="comment-content">
+                    <p>{{ comment.content_html |safe }}</p>
+                </div>
+
+                <span>文章名：</span><a href="{{ url_for('main.blog', id=comment.blog_id) }}">{{comment.blog.title }}</a>
+
+                <div class="text-right">
+                    {% if comment.disabled %}
+                    <!--href="{{ url_for('manage.enable_comment', id=comment.id, page=page) }}"-->
+                    <a class="btn btn-warning btn-xs comment-edit-btn enable_comment"
+                       onclick=disable_enable_comment({{ comment.id }})>恢复</a>
+                    {% else %}
+                    <!--href="{{ url_for('manage.disable_comment', id=comment.id, page=page) }}"-->
+                    <a class="btn btn-warning btn-xs comment-edit-btn disable_comment"
+                       onclick=disable_enable_comment({{ comment.id }})>屏蔽</a>
+                    {% endif %}
+                    <a class="btn btn-danger btn-xs comment-edit-btn delete_commit"
+                       href="{{ url_for('manage.delete_comment', id=comment.id, page=page) }}">删除</a>
+                </div>
+                <hr>
             </li>
             {% endfor %}
             {% if pagination %}
@@ -49,4 +56,35 @@
     </div>
 </div>
 
+{% endblock %}
+
+{% block scripts %}
+{{ super() }}
+<script>
+    disable_enable_comment = function (id) {
+        var li = $('#' + id);
+        if (li.find('.disable_comment').length > 0) {//禁用
+            $.get('/manage/comment/disable', {
+                id: id
+            }).done(function (data) {
+                var content = li.find('.comment-content');
+                var btn = li.find('.disable_comment');
+                btn.text('恢复');
+                btn.removeClass('disable_comment').addClass('enable_comment');
+                content.html('<p class="disable_tip"><b>该评论内容已被管理员屏蔽</b></p>' + content.html());
+            })
+        } else if (li.find('.enable_comment').length > 0) {//恢复
+            $.get('/manage/comment/enable', {
+                id: id
+            }).done(function (data) {
+                var li = $('#' + id);
+                li.find('.disable_tip').remove();
+                var btn = li.find('.enable_comment');
+                btn.text('屏蔽');
+                btn.removeClass('enable_comment').addClass('disable_comment');
+            })
+        }
+    }
+
+</script>
 {% endblock %}
