--- a/app/templates/base.html
+++ b/app/templates/base.html
@@ -61,7 +61,7 @@
 
     {% block page_content %}{% endblock %}
 </div>
-<div class="container-fluid">
+<div class="container-fluid height-100">
     {% block create_blog_content %}{% endblock %}
 </div>
 {% endblock %}
