--- a/app/templates/users.html
+++ b/app/templates/users.html
@@ -6,7 +6,7 @@
 {% block page_content %}
 <div class="col-md-8 col-md-offset-2">
     {% if users %}
-    <table class="table table-bordered">
+    <table class="table .table-hover">
         <thead>
         <tr>
             <th class="th-left">昵称</th>
