--- a/app/static/my_style.css
+++ b/app/static/my_style.css
@@ -312,9 +312,10 @@ div.comment-content {
 
 #markdown-edit {
     width: 100%;
-    height: 100%;
+    height: 81%;
     overflow: auto;
-    background-color: #eeeeee;
+    margin-top: 3px;
+    background-color: #F5F5F5;
 }
 
 #markdown-preview {
@@ -324,3 +325,35 @@ div.comment-content {
     overflow: auto;
     background-color: #FFFFF0;
 }
+
+.editor-blog-title {
+    width: 100%;
+    height: 100%;
+    color: black;
+    padding-left: 30px;
+    font-size: 25px;
+    border-color: transparent;
+    box-shadow: none;
+}
+
+.editor-blog-title:focus {
+    box-shadow: none;
+    border-color: transparent;
+}
+
+.editor-blog-area {
+    width: 100%;
+    height: 100%;
+    resize: none;
+    background-color: #E8E8E8;
+    border-color: transparent;
+    padding: 5px 5px 5px 30px;
+    margin-top: 3px;
+    box-shadow: none;
+}
+
+.editor-blog-area:focus {
+    box-shadow: none;
+    border-color: transparent;
+}
+
