--- a/app/templates/base.html
+++ b/app/templates/base.html
@@ -1,65 +1,65 @@
 {% extends "common_base.html" %}
 
 {% block navbar %}
-    <nav class="navbar navbar-inverse navbar-fixed-top" role="navigation">
-        <div class="container">
-            <div class="navbar-header">
-                <a class="navbar-brand" href="{{ url_for('main.index') }}">NiceBlog</a>
-            </div>
-            <div class="navbar-collapse collapse">
-                <ul class="nav navbar-nav">
-                    <li><a href="{{ url_for('main.index') }}">主页</a></li>
-                </ul>
-                <ul class="nav navbar-nav navbar-right">
-                    {% if current_user.is_authenticated %}
-                        <li class="dropdown">
-                            <a href="#" class="dropdown-toggle" data-toggle="dropdown">
-                                <img class="img-circle" src="{{ current_user.gravatar(size=22) }} ">
-                                {{ current_user.username }} <b class="caret"></b>
-                            </a>
-                            <ul class="dropdown-menu">
-                                <li><a href="{{ url_for('manage.my_favourites') }}">喜欢的文章</a></li>
-                                {% if current_user.is_administrator() %}
-                                    <li><a href="{{ url_for('main.drafts') }}">草稿</a></li>
-                                    <li><a href="{{ url_for('manage.manage_users') }}">用户管理</a></li>
-                                    <li><a href="{{ url_for('manage.manage_comments') }}">评论管理</a></li>
-                                {% endif %}
-                                <li><a href="{{ url_for('main.user', username=current_user.username) }}">个人信息</a></li>
-                                <li><a href="{{ url_for('auth.change_password') }}">修改密码</a></li>
-                                <li><a href="{{ url_for('auth.logout') }}">退出登录</a></li>
-                            </ul>
-                        </li>
-                        {% if current_user.is_administrator() %}
-                            <li><a href="{{ url_for('main.create_blog') }}">写文章</a></li>
-                        {% endif %}
-                    {% else %}
-                        <li><a href="{{ url_for('auth.login') }}">登录</a></li>
-                    {% endif %}
-                </ul>
-            </div>
+<nav class="navbar navbar-inverse navbar-fixed-top" role="navigation">
+    <div class="container">
+        <div class="navbar-header">
+            <a class="navbar-brand" href="{{ url_for('main.index') }}">NiceBlog</a>
         </div>
-    </nav>
+        <div class="navbar-collapse collapse">
+            <ul class="nav navbar-nav">
+                <li><a href="{{ url_for('main.index') }}">主页</a></li>
+            </ul>
+            <ul class="nav navbar-nav navbar-right">
+                {% if current_user.is_authenticated %}
+                <li class="dropdown">
+                    <a href="#" class="dropdown-toggle" data-toggle="dropdown">
+                        <img class="img-circle" src="{{ current_user.gravatar(size=22) }} ">
+                        {{ current_user.username }} <b class="caret"></b>
+                    </a>
+                    <ul class="dropdown-menu">
+                        <li><a href="{{ url_for('manage.my_favourites') }}">喜欢的文章</a></li>
+                        {% if current_user.is_administrator() %}
+                        <li><a href="{{ url_for('main.drafts') }}">草稿</a></li>
+                        <li><a href="{{ url_for('manage.manage_users') }}">用户管理</a></li>
+                        <li><a href="{{ url_for('manage.manage_comments') }}">评论管理</a></li>
+                        {% endif %}
+                        <li><a href="{{ url_for('main.user', username=current_user.username) }}">个人信息</a></li>
+                        <li><a href="{{ url_for('auth.change_password') }}">修改密码</a></li>
+                        <li><a href="{{ url_for('auth.logout') }}">退出登录</a></li>
+                    </ul>
+                </li>
+                {% if current_user.is_administrator() %}
+                <li><a href="{{ url_for('main.create_blog') }}" target="_blank">写文章</a></li>
+                {% endif %}
+                {% else %}
+                <li><a href="{{ url_for('auth.login') }}">登录</a></li>
+                {% endif %}
+            </ul>
+        </div>
+    </div>
+</nav>
 {% endblock %}
 
 {% block content %}
-    <div class="container">
-        {% for message in get_flashed_messages() %}
-            <div class="alert alert-warning">
-                <button type="button" class="close" data-dismiss="alert">&times;</button>
-                {{ message }}
-            </div>
-        {% endfor %}
-
-        {% block page_content %}{% endblock %}
-
-        <div class="container-fluid col-md-12 blog-footer">
-            <footer class="footer">
-                <p>Powered by <a href="#">Othershe</a>. Copyright © 2018.</p>
-                <p>All rights reserved.</p>
-                <p>
-                    <a href="#">Back to top</a>
-                </p>
-            </footer>
-        </div>
+<div class="container">
+    {% for message in get_flashed_messages() %}
+    <div class="alert alert-warning">
+        <button type="button" class="close" data-dismiss="alert">&times;</button>
+        {{ message }}
     </div>
+    {% endfor %}
+
+    {% block page_content %}{% endblock %}
+</div>
+
+<div class="container-fluid col-md-12 blog-footer">
+    <footer class="footer">
+        <p>Powered by <a href="#">Othershe</a>. Copyright © 2018.</p>
+        <p>All rights reserved.</p>
+        <p>
+            <a href="#">Back to top</a>
+        </p>
+    </footer>
+</div>
 {% endblock %}
